fixed text and carousel on mobile

--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
                 >
                 <select class="form-select" id="service">
                   <option selected>Choose...</option>
-                  <option value="ghostwriting">Ghostwriting</option>
+                  <option value="ghostwriting">Content Writing</option>
                   <option value="copyrighting">Copyrighting</option>
-                  <option value="beta_reading">Beta Reading</option>
-                  <option value="notary">Notary</option>
+                  <option value="beta_reading">Book Reviews</option>
+                  <option value="notary">Ghostwriting</option>
                 </select>
               </div>
               <div class="mb-3">
@@ -259,12 +259,12 @@
       class="hero text-shadow text-white text-center d-flex flex-column align-items-center justify-content-center"
     >
       <img
-        src="images/Laura-HeadHeadshot.jpg"
+        src="images/laura-img-3.jpeg"
         class="rounded-circle mb-3"
         alt="Profile Picture"
         style="width: 250px; height: 250px; object-fit: cover"
       />
-      <h1>My name is <span class="underline-text">Laura Ray</span></h1>
+      <h1>My name is <span class="underline-text">Laura-Ray</span></h1>
       <div class="animated-text">
         I'm a
         <p style="background-color: #091727"><span></span></p>
@@ -279,11 +279,11 @@
     <!-- Service Card Section -->
     <!-- <div id="services"></div> -->
     <div class="container mt-5">
-      <div class="row justify-content-center">
+      <div class="row justify-content-center text-center">
         <div class="col-lg-3 col-md-6 col-sm-12 mb-5 mt-5">
           <div class="card">
             <div class="icon-container">
-              <i class="fa fa-pen-to-square"></i>
+              <i class="fa fa-pencil"></i>
             </div>
             <div class="card-body text-shadow">
               <h3 class="card-title">Content Writing</h3>
@@ -297,7 +297,7 @@
         <div class="col-lg-3 col-md-6 col-sm-12 mb-5 mt-5">
           <div class="card">
             <div class="icon-container">
-              <i class="fa fa-book-open-reader"></i>
+              <i class="fa fa-pen-to-square"></i>
             </div>
             <div class="card-body text-shadow">
               <h4 class="card-title">Copywriting</h4>
@@ -311,13 +311,14 @@
         <div class="col-lg-3 col-md-6 col-sm-12 mb-5 mt-5">
           <div class="card">
             <div class="icon-container">
-              <i class="fa fa-signature"></i>
+              <i class="fa fa-book"></i>
+              <!-- <i class="fa fa-book-open-reader"></i> -->
             </div>
             <div class="card-body text-shadow">
-              <h4 class="card-title">Manuscript Reviews</h4>
+              <h4 class="card-title">Book Reviews</h4>
               <p class="card-text">
-                Constructive reviews conducted by a meticulous bookworm purposed
-                to elevate your stories.
+                Constructive manuscript evaluations conducted by an avid
+                bookworm purposed to elevate your stories.
               </p>
             </div>
           </div>
@@ -325,7 +326,7 @@
         <div class="col-lg-3 col-md-6 col-sm-12 mb-5 mt-5">
           <div class="card">
             <div class="icon-container">
-              <i class="fa fa-signature"></i>
+              <i class="fa fa-ghost"></i>
             </div>
             <div class="card-body text-shadow">
               <h4 class="card-title">Ghostwriting</h4>
@@ -407,7 +408,7 @@
 
     <!-- Project Section -->
     <section class="diagonal sectional">
-      <div class="wrapper">
+      <div class="wrapper text-center">
         <h2 class="section-title">About Me</h2>
         <p>
           <!-- Hello there! I’m a multi-passionate person who has developed a work
@@ -415,22 +416,30 @@
           stringing them together. I work with businesses, individuals, and
           authors across a wide range of topics within the e-commerce niche and
           the wild world of storytelling. -->
-          Hi there! I’m Laura-Ray. I have a flair for words and a knack for
+          <!-- Hi there! I’m Laura-Ray. I have a flair for words and a knack for
           stringing them together. My passion is in helping others realize their
           vision. Through collaboration and craft, I give voice to my client’s
-          vision. On rainy days, you can find me sipping coffee in bed, and on
+          vision. -->
+          <!-- vision. On rainy days, you can find me sipping coffee in bed, and on
           sunny days, sitting on my back porch in the company of my pets. I’m an
           avid bird watcher and a collector of interests. I like to spend my
           free time un-busily and invest in myself by exercising and spending
-          quality time with the people I love.
+          quality time with the people I love. -->
+
+          With years of immersion in persuasive writing, a comprehensive writing
+          course under my belt, and extensive professional experience, I provide
+          exceptional writing and critiquing services that breathe life into
+          your narratives. Combining meticulous attention to detail with a deep
+          respect for your unique voice, I aim to transform your ideas into
+          compelling stories.
         </p>
       </div>
     </section>
-    <!-- <section class="wavy sectional">
-      <div class="wrapper">
+    <section class="wavy sectional">
+      <div class="wrapper text-center">
         <h2 class="section-title">Reach Out</h2>
         <p>
-          Your success is my success. I help my clients capture their vision and
+          <!-- Your success is my success. I help my clients capture their vision and
           share it through compelling content. With guidance and collaboration-
           together- your ideas can become influential. Have I piqued your
           interest yet? Go ahead and give that Contact Me button a click.
@@ -439,24 +448,26 @@
           themselves and guide them through the wild world of storytelling.
           Through collaboration, my clients realize and capture their vision.
           Understanding their goal and giving voice to their purpose is what
-          makes me successful.
+          makes me successful. -->
 
-          Want to learn more about how my services can get you closer to your
-          goals? Reach out!
+          Want to figure out how my services can get you closer to your goals?
+          Let's have a chat! Together, we can customize a service package just
+          for you. Let's collaborate to make your message resonate powerfully
+          and authentically.
         </p>
       </div>
-    </section> -->
+    </section>
 
     <!-- <div style="background: #091727; height: 80px"></div> -->
 
     <div
-      class="container-fluid mt-5 text text-center carousel-border text-shadow"
+      class="container-fluid mt-5 text text-center carousel-border text-shadow mb-lg-5"
     >
       <h2 class="testimonials-title d-none d-lg-block">Testimonials</h2>
       <!-- <h5 class="testimonials-subtitle">See what my clients have to say</h5> -->
       <div
         id="carouselExampleIndicators"
-        class="carousel slide d-none d-lg-block"
+        class="carousel slide d-lg-block"
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -489,11 +500,11 @@
             <div class="d-flex justify-content-center">
               <div class="carousel-card">
                 <div class="card-body">
-                  <h3 class="card-title">Anonymous</h3>
+                  <h3 class="card-title">CEO at Anonymous</h3>
                   <h6 class="card-text">
                     <i class="fas fa-quote-left quote-icon-top"></i>
                     <i class="fas fa-quote-right quote-icon-bottom"></i>
-                    Laura Ray has been ghostwriting informative and concise
+                    Laura-Ray has been ghostwriting informative and concise
                     blogs for my financial firm. She has a unique ability to
                     take complex information and make it comprehensible for the
                     average reader.
@@ -511,12 +522,12 @@
                   <h6 class="card-text">
                     <i class="fas fa-quote-left quote-icon-top"></i>
                     <i class="fas fa-quote-right quote-icon-bottom"></i>
-                    My experience working with Laura has been phenomenal. I
+                    My experience working with Laura-Ray has been phenomenal. I
                     recently launched my balloon and decor business, and being
                     able to have a reliable source to write posts for engagement
                     and product descriptions has been invaluable. Every
                     submission she provided was timely and effectively met my
-                    brand and goal. Laura was able to add and adjust language
+                    brand and goal. Laura-Ray was able to add and adjust language
                     and verbiage to meet every thematic balloon design that was
                     sent her way. I happily recommend her writing services to
                     anyone who needs a fresh, new voice and perspective to
@@ -647,8 +658,8 @@
       <div class="container">
         <div class="row icon-row flex-sm-column flex-md-row">
           <div class="col-sm-4">
-            <h3 class="footer-title">Laura Ray</h3>
-            <p>© 2023 Laura Ray</p>
+            <h3 class="footer-title">Laura-Ray</h3>
+            <p>© 2023 Laura-Ray</p>
           </div>
           <div class="col-sm-4 text-center">
             <div class="social-media-icons">
