--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
     <link type="text/css" rel="stylesheet" href="styles/index.css" />
     <link rel="icon" href="./images/Laura-AI-1-removebg-preview.png" />
-    <title>Laura Ray Writes</title>
+    <title>Laura-Ray Writes</title>
   </head>
 
   <style></style>
@@ -215,7 +215,7 @@
                   <option selected>Choose...</option>
                   <option value="ghostwriting">Content Writing</option>
                   <option value="copyrighting">Copyrighting</option>
-                  <option value="beta_reading">Book Reviews</option>
+                  <option value="beta_reading">Book Evaluations</option>
                   <option value="notary">Ghostwriting</option>
                 </select>
               </div>
@@ -289,7 +289,7 @@
               <h3 class="card-title">Content Writing</h3>
               <h6 class="card-text">
                 Intentional and necessary compilations of sentences written by a
-                wordsmith.
+                wordsmith
               </h6>
             </div>
           </div>
@@ -302,8 +302,8 @@
             <div class="card-body text-shadow">
               <h4 class="card-title">Copywriting</h4>
               <p class="card-text">
-                Marketable and persuasive clusters of words assured to spark
-                action.
+                Marketable and persuasive clusters of words assured to call your
+                target audience to action.
               </p>
             </div>
           </div>
@@ -315,7 +315,7 @@
               <!-- <i class="fa fa-book-open-reader"></i> -->
             </div>
             <div class="card-body text-shadow">
-              <h4 class="card-title">Book Reviews</h4>
+              <h4 class="card-title">Book Evaluations</h4>
               <p class="card-text">
                 Constructive manuscript evaluations conducted by an avid
                 bookworm purposed to elevate your stories.
@@ -465,10 +465,7 @@
     >
       <h2 class="testimonials-title d-none d-lg-block">Testimonials</h2>
       <!-- <h5 class="testimonials-subtitle">See what my clients have to say</h5> -->
-      <div
-        id="carouselExampleIndicators"
-        class="carousel slide d-lg-block"
-      >
+      <div id="carouselExampleIndicators" class="carousel slide d-lg-block">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="d-flex justify-content-center">
@@ -527,11 +524,11 @@
                     able to have a reliable source to write posts for engagement
                     and product descriptions has been invaluable. Every
                     submission she provided was timely and effectively met my
-                    brand and goal. Laura-Ray was able to add and adjust language
-                    and verbiage to meet every thematic balloon design that was
-                    sent her way. I happily recommend her writing services to
-                    anyone who needs a fresh, new voice and perspective to
-                    elevate their brand.
+                    brand and goal. Laura-Ray was able to add and adjust
+                    language and verbiage to meet every thematic balloon design
+                    that was sent her way. I happily recommend her writing
+                    services to anyone who needs a fresh, new voice and
+                    perspective to elevate their brand.
                   </h6>
                 </div>
               </div>
@@ -658,8 +655,8 @@
       <div class="container">
         <div class="row icon-row flex-sm-column flex-md-row">
           <div class="col-sm-4">
-            <h3 class="footer-title">Laura-Ray</h3>
-            <p>© 2023 Laura-Ray</p>
+            <h3 class="footer-title">Laura-Ray Read</h3>
+            <p>© 2023 Laura-Ray Read</p>
           </div>
           <div class="col-sm-4 text-center">
             <div class="social-media-icons">
