fixed cards on all screen sizes except nest hub max because only God knows why

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
     <!-- <div id="services"></div> -->
     <div class="container mt-5">
       <div class="row justify-content-center text-center">
-        <div class="col-lg-3 col-md-6 col-sm-12 mb-5 mt-5">
+        <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 mb-5 mt-5">
           <div class="card">
             <div class="icon-container">
               <i class="fa fa-pencil"></i>
@@ -289,12 +289,12 @@
               <h3 class="card-title">Content Writing</h3>
               <h6 class="card-text">
                 Intentional and necessary compilations of sentences written by a
-                wordsmith.
+                wordsmith
               </h6>
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-12 mb-5 mt-5">
+        <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 mb-5 mt-5">
           <div class="card">
             <div class="icon-container">
               <i class="fa fa-pen-to-square"></i>
@@ -303,12 +303,12 @@
               <h4 class="card-title">Copywriting</h4>
               <p class="card-text">
                 Marketable and persuasive clusters of words assured to spark
-                action.
+                action
               </p>
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-12 mb-5 mt-5">
+        <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 mb-5 mt-5">
           <div class="card">
             <div class="icon-container">
               <i class="fa fa-book"></i>
@@ -318,12 +318,12 @@
               <h4 class="card-title">Book Reviews</h4>
               <p class="card-text">
                 Constructive manuscript evaluations conducted by an avid
-                bookworm purposed to elevate your stories.
+                bookworm purposed to elevate your stories
               </p>
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-12 mb-5 mt-5">
+        <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 mb-5 mt-5">
           <div class="card">
             <div class="icon-container">
               <i class="fa fa-ghost"></i>
@@ -332,7 +332,7 @@
               <h4 class="card-title">Ghostwriting</h4>
               <p class="card-text">
                 Captured thoughts and leveraged potential as guided by an
-                invisible stand-in.
+                invisible stand-in
               </p>
             </div>
           </div>
@@ -465,10 +465,7 @@
     >
       <h2 class="testimonials-title d-none d-lg-block">Testimonials</h2>
       <!-- <h5 class="testimonials-subtitle">See what my clients have to say</h5> -->
-      <div
-        id="carouselExampleIndicators"
-        class="carousel slide d-lg-block"
-      >
+      <div id="carouselExampleIndicators" class="carousel slide d-lg-block">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="d-flex justify-content-center">
@@ -489,7 +486,7 @@
                     Her expertise and genuine commitment to helping me improve
                     my manuscript have been invaluable to me, and I am confident
                     her skills and dedication will continue to benefit many
-                    authors
+                    authors.
                   </h6>
                 </div>
               </div>
@@ -527,11 +524,11 @@
                     able to have a reliable source to write posts for engagement
                     and product descriptions has been invaluable. Every
                     submission she provided was timely and effectively met my
-                    brand and goal. Laura-Ray was able to add and adjust language
-                    and verbiage to meet every thematic balloon design that was
-                    sent her way. I happily recommend her writing services to
-                    anyone who needs a fresh, new voice and perspective to
-                    elevate their brand.
+                    brand and goal. Laura-Ray was able to add and adjust
+                    language and verbiage to meet every thematic balloon design
+                    that was sent her way. I happily recommend her writing
+                    services to anyone who needs a fresh, new voice and
+                    perspective to elevate their brand.
                   </h6>
                 </div>
               </div>
